update(footer): Add original author of template
- Fix pop image on posts

--- a/al_folio_theme/templates/_includes/footer.html
+++ b/al_folio_theme/templates/_includes/footer.html
@@ -1,5 +1,5 @@
 {% set footer_content %}
-        &copy; Copyright {{ SITE.time | strftime('%Y') }} {{ SITE.first_name }} {{ SITE.middle_name or ""}} {{ SITE.last_name }}. {{ SITE.footer_text or ""}}&nbsp;
+        &copy; {{ SITE.time | strftime('%Y') }}. Page by {{ SITE.first_name }} {{ SITE.middle_name or ""}} {{ SITE.last_name }} is licenced under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">. {{ SITE.footer_text or ""}}&nbsp;
         {%- if SITE.impressum_path -%}
         <a href="{{ SITE.url }}{{ SITE.baseurl }}{{ SITE.impressum_path }}">Impressum</a>.
         {%- endif -%}
